[package]
name = "cst"
version = "1.1.2"
edition = "2024"

[lints]
rust.unsafe_code = "forbid"
rust.unused_results = "deny"
clippy.let_underscore_untyped = "deny"
clippy.allow_attributes = "deny"
clippy.allow_attributes_without_reason = "deny"
clippy.nursery = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }

[dependencies]
codemap = "0.1.3"
